SERVER-57378 Fix data-race in the resharding commit monitor unit-tests